--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description"
     content="CodeBooker is a book recommendation app for coders/programmers who are looking for books recommendation on programming/coding to read" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/codebooker192.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
